--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d lib"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack -w",
+    "lite": "lite-server --verbose --open dist",
+    "start": "concurrent \"npm run webpack\" \"npm run lite\""
   },
   "repository": {
     "type": "git",
@@ -18,7 +21,19 @@
   "homepage": "https://github.com/kozenumezawa/ChatTool#readme",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1"
+    "babel-preset-react": "^6.11.1",
+    "concurrently": "^2.1.0",
+    "lite-server": "^2.2.2",
+    "react": "^15.2.0",
+    "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "marked": "^0.3.5",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "superagent": "^2.0.0"
   }
 }
