--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "firebase": "^3.1.0",
     "marked": "^0.3.5",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
