--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kozenumezawa/ChatTool#readme",
   "dependencies": {
     "react": "^15.2.0",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
