--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --content-base public/"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
     "firebase": "^3.1.0",
     "react": "^15.2.0",
     "react-bootstrap": "^0.29.5",
-    "react-dom": "^15.2.0"
+    "react-dom": "^15.2.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
